# controller/controller.go
@@ -1,6 +1,7 @@
 package controller
 
 type Controller struct {
+	Authentication      AuthenticationController
 	User                UserController
 	Location            LocationController
 	Business            BusinessController
